--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
     </header>
 
     <main>
-        <section class="intro">
+
+        <section id="intro">
             <div class="container">
                 <h4 class="introheading">Our Mission</h4>
                 <p id="introtext">"Our mission in <b>GrowFuture Organisation</b> is to help plant seeds in community
@@ -61,7 +62,9 @@
             </div>
 
         </section>
-        <section>
+
+
+        <section id="shoppingsection">
 
             <div class="container">
                 <h4 class="subheading">Our Products</h4>
@@ -69,8 +72,11 @@
                     <p>🛒 <b>Number of items in your Shopping Cart:</b> <span id="cartcount">0</span></p>
                     <p>💳 <b>Total amount: €</b> <span id="totalprice">0</span></p>
                 </div>
+
+                <button type="button" id="resetbtn">🔄 Reset Cart</button>
+                <button type="button" id="checkoutbtn">✅ Checkout</button>
+
                 <div class="row mt-3">
-                    
 
                     <div class="col-12 col-sm-6 col-md-4 mb-5">
                         <div class="card">
@@ -84,7 +90,8 @@
                                 </p>
                                 <p class="fw-bold">€5</p>
 
-                                <button class="addtocartbtn" data-name="Sunflower Seeds" data-price="5">Add to Cart</button>
+                                <button class="addtocartbtn" data-name="Sunflower Seeds" data-price="5">Add to
+                                    Cart</button>
 
                             </div>
 
@@ -101,7 +108,8 @@
                                     Every purchase supports planting flowers in public green spaces.
                                 </p>
                                 <p class="card-text fw-bold">€7</p>
-                                <button class="addtocartbtn" data-name="Lavnder Seeds" data-price="7">Add to Cart</button>
+                                <button class="addtocartbtn" data-name="Lavnder Seeds" data-price="7">Add to
+                                    Cart</button>
                             </div>
                         </div>
                     </div>
@@ -115,7 +123,8 @@
                                     Every purchase supports planting flowers in public green spaces.
                                 </p>
                                 <p class="card-text fw-bold">€6</p>
-                                <button class="addtocartbtn" data-name="Zinnia Seeds" data-price="6">Add to Cart</button>
+                                <button class="addtocartbtn" data-name="Zinnia Seeds" data-price="6">Add to
+                                    Cart</button>
                             </div>
                         </div>
                     </div>
@@ -129,7 +138,8 @@
                                     Every purchase supports planting flowers in public green spaces.
                                 </p>
                                 <p class="card-text fw-bold">€6</p>
-                                <button class="addtocartbtn" data-name="Lemon Tree Seeds" data-price="6">Add to Cart</button>
+                                <button class="addtocartbtn" data-name="Lemon Tree Seeds" data-price="6">Add to
+                                    Cart</button>
                             </div>
                         </div>
                     </div>
@@ -145,7 +155,8 @@
                                     for local wildlife.
                                 </p>
                                 <p class="card-text fw-bold">€7</p>
-                                <button class="addtocartbtn" data-name="Butterfly Garden Mix" data-price="7">Add to Cart</button>
+                                <button class="addtocartbtn" data-name="Butterfly Garden Mix" data-price="7">Add to
+                                    Cart</button>
                             </div>
                         </div>
                     </div>
@@ -159,7 +170,8 @@
                                     Every purchase supports planting flowers in public green spaces.
                                 </p>
                                 <p class="card-text fw-bold">€6</p>
-                                <button class="addtocartbtn" data-name="Rosemary Seeds" data-price="6">Add to Cart</button>
+                                <button class="addtocartbtn" data-name="Rosemary Seeds" data-price="6">Add to
+                                    Cart</button>
                             </div>
                         </div>
                     </div>
@@ -175,7 +187,8 @@
                                     for local wildlife.
                                 </p>
                                 <p class="card-text fw-bold">€7</p>
-                                <button class="addtocartbtn" data-name="Bee-Friendly Flower Mix" data-price="7">Add to Cart</button>
+                                <button class="addtocartbtn" data-name="Bee-Friendly Flower Mix" data-price="7">Add to
+                                    Cart</button>
                             </div>
                         </div>
                     </div>
@@ -189,7 +202,8 @@
                                     Every purchase supports planting flowers in public green spaces.
                                 </p>
                                 <p class="card-text fw-bold">€8</p>
-                                <button class="addtocartbtn" data-name="Olive Tree Seeds" data-price="8">Add to Cart</button>
+                                <button class="addtocartbtn" data-name="Olive Tree Seeds" data-price="8">Add to
+                                    Cart</button>
                             </div>
                         </div>
                     </div>
@@ -204,7 +218,8 @@
                                     environment for local wildlife.
                                 </p>
                                 <p class="card-text fw-bold">€10</p>
-                                <button class="addtocartbtn" data-name="Wooden Bird House" data-price="10">Add to Cart</button>
+                                <button class="addtocartbtn" data-name="Wooden Bird House" data-price="10">Add to
+                                    Cart</button>
                             </div>
                         </div>
                     </div>
@@ -219,7 +234,8 @@
                                     Every purchase supports our community gardening and planting efforts.
                                 </p>
                                 <p class="card-text fw-bold">€7</p>
-                                <button class="addtocartbtn" data-name="Biodegradable Starter Pots" data-price="7">Add to Cart</button>
+                                <button class="addtocartbtn" data-name="Biodegradable Starter Pots" data-price="7">Add
+                                    to Cart</button>
                             </div>
                         </div>
                     </div>
@@ -234,7 +250,8 @@
                                     Every purchase helps support our community gardening and environmental projects.
                                 </p>
                                 <p class="card-text fw-bold">€8</p>
-                                <button class="addtocartbtn" data-name="Recycled Small Watering Can" data-price="8">Add to Cart</button>
+                                <button class="addtocartbtn" data-name="Recycled Small Watering Can" data-price="8">Add
+                                    to Cart</button>
                             </div>
                         </div>
                     </div>
@@ -251,13 +268,87 @@
                                     Each purchase supports our community planting and planting projects.”
                                 </p>
                                 <p class="card-text fw-bold">€3</p>
-                                <button class="addtocartbtn" data-name="Wooden Plant Labels" data-price="3">Add to Cart</button>
+                                <button class="addtocartbtn" data-name="Wooden Plant Labels" data-price="3">Add to
+                                    Cart</button>
 
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+        </section>
+
+        <section id="buyerinformation" class="hide">
+
+            <h1>Buyer & Shipping Information</h1>
+
+            <form action="">
+
+                <h2>Buyer Information</h2>
+
+                <div class="container-fluid">
+
+                    <div class="row">
+                        <div class="buyerinfo col-6">
+                            <label for="">Firstname</label>
+                            <input type="text" placeholder="Enter your firstname">
+                        </div>
+                        <div class="buyerinfo col-6">
+                            <label for="">Surname</label>
+                            <input type="text" placeholder="Enter your surname">
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="buyerinfo col-6">
+                            <label for="">Email adress</label>
+                            <input type="email" placeholder="Enter your email-address">
+                        </div>
+                        <div class="buyerinfo col-6">
+                            <label for="">Phone number</label>
+                            <input type="text" placeholder="Enter your phone number">
+                        </div>
+                    </div>
+
+                </div>
+
+
+                <h2>Shipping Address</h2>
+
+                <div class="container-fluid">
+
+                    <div class="row">
+                        <div class="shippinginfo col-6">
+                            <label for="">Street Number</label>
+                            <input type="text" placeholder="Enter your street number">
+                        </div>
+                        <div class="shippinginfo col-6">
+                            <label for="">House Number</label>
+                            <input type="text" placeholder="Enter your house number">
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="shippinginfo col-6">
+                            <label for="">City</label>
+                            <input type="text" placeholder="Enter your city">
+                        </div>
+                        <div class="shippinginfo col-6">
+                            <label for="">ZIP/Postal code</label>
+                            <input type="text" placeholder="Enter your ZIP/Postal code">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="shippinginfo col-6">
+                            <label for="">Country</label>
+                            <input type="text" placeholder="Enter your country">
+                        </div>
+                    </div>
+                </div>
+                </div>
+
+            </form>
+
         </section>
     </main>
 
