editing buyer page

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <main>
 
-        <section id="intro">
+        <section id="intro" class="hide">
             <div class="container">
                 <h4 class="introheading">Our Mission</h4>
                 <p id="introtext">"Our mission in <b>GrowFuture Organisation</b> is to help plant seeds in community
@@ -64,7 +64,7 @@
         </section>
 
 
-        <section id="shoppingsection">
+        <section id="shoppingsection" class="hide">
 
             <div class="container">
                 <h4 class="subheading">Our Products</h4>
@@ -278,69 +278,66 @@
             </div>
         </section>
 
-        <section id="buyerinformation" class="hide">
+        <section id="buyerinformation">
 
-            <h1>Buyer & Shipping Information</h1>
+            <h1 id="headingpage2">Buyer & Shipping Information</h1>
 
             <form action="">
-
-                <h2>Buyer Information</h2>
-
                 <div class="container-fluid">
+                    <h2 class="subheadingpage2">Buyer Information</h2>
 
                     <div class="row">
-                        <div class="buyerinfo col-6">
-                            <label for="">Firstname</label>
+                        <div class="buyerinfo col-12 col-sm-12 col-md-12 col-lg-6">
+                            <label for="">Firstname:</label>
                             <input type="text" placeholder="Enter your firstname">
                         </div>
-                        <div class="buyerinfo col-6">
-                            <label for="">Surname</label>
+                        <div class="buyerinfo col-12 col-sm-12 col-md-12 col-lg-6">
+                            <label for="">Surname:</label>
                             <input type="text" placeholder="Enter your surname">
                         </div>
                     </div>
 
                     <div class="row">
-                        <div class="buyerinfo col-6">
-                            <label for="">Email adress</label>
+                        <div class="buyerinfo col-12 col-sm-12 col-md-12 col-lg-6">
+                            <label for="">Email adress:</label>
                             <input type="email" placeholder="Enter your email-address">
                         </div>
-                        <div class="buyerinfo col-6">
-                            <label for="">Phone number</label>
+                        <div class="buyerinfo col-12 col-sm-12 col-md-12 col-lg-6">
+                            <label for="">Phone number:</label>
                             <input type="text" placeholder="Enter your phone number">
                         </div>
                     </div>
 
                 </div>
 
-
-                <h2>Shipping Address</h2>
-
                 <div class="container-fluid">
 
+                    <h2 class="subheadingpage2">Shipping Address</h2>
+
                     <div class="row">
-                        <div class="shippinginfo col-6">
-                            <label for="">Street Number</label>
+                        <div class="shippinginfo col-12 col-sm-12 col-md-12 col-lg-6">
+                            <label for="">Street Number:</label>
                             <input type="text" placeholder="Enter your street number">
                         </div>
-                        <div class="shippinginfo col-6">
-                            <label for="">House Number</label>
+                        <div class="shippinginfo col-12 col-sm-12 col-md-12 col-lg-6">
+                            <label for="">House Number:</label>
                             <input type="text" placeholder="Enter your house number">
                         </div>
                     </div>
 
                     <div class="row">
-                        <div class="shippinginfo col-6">
-                            <label for="">City</label>
+                        <div class="shippinginfo col-12 col-sm-12 col-md-12 col-lg-6">
+                            <label for="">City:</label>
                             <input type="text" placeholder="Enter your city">
                         </div>
-                        <div class="shippinginfo col-6">
-                            <label for="">ZIP/Postal code</label>
+                        <div class="shippinginfo col-12 col-sm-12 col-md-12 col-lg-6">
+                            <label for="">ZIP/Postal code:</label>
                             <input type="text" placeholder="Enter your ZIP/Postal code">
                         </div>
                     </div>
                     <div class="row">
-                        <div class="shippinginfo col-6">
-                            <label for="">Country</label>
+                        <div class="shippinginfo col-12 col-sm-12 col-md-12 col-lg-6">
+                            <label for="">Country:</label>
                             <input type="text" placeholder="Enter your country">
                         </div>
                     </div>
