--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <main>
 
-        <section id="intro" class="hide">
+        <section id="intro">
             <div class="container">
                 <h4 class="introheading">Our Mission</h4>
                 <p id="introtext">"Our mission in <b>GrowFuture Organisation</b> is to help plant seeds in community
@@ -64,7 +64,7 @@
         </section>
 
 
-        <section id="shoppingsection" class="hide">
+        <section id="shoppingsection">
 
             <div class="container">
                 <h4 class="subheading">Our Products</h4>
@@ -278,7 +278,7 @@
             </div>
         </section>
 
-        <section id="buyerinformation">
+        <section id="buyerinformation" class="hide">
 
             <h1 id="headingpage2">Buyer & Shipping Information</h1>
 
@@ -342,11 +342,15 @@
                         </div>
                     </div>
                 </div>
-                </div>
-
+                <button type="button" id="placeorderbtn">Place Order</button>
             </form>
-
         </section>
+
+        <section id="confirmationpage" class="hide">
+            <h2>Purchase Summary</h2>
+            <h2>Purchase Summary</h2>
+        </section>
+
     </main>
 
     <footer>
