--- a/index.html
+++ b/index.html
@@ -385,8 +385,9 @@
                     <ul id = "summary" class="list-group">
                     </ul>
                 </div>
-
-                    </p>
+                    <p>Subtotal:<span id="subtotal"> </span>€</p>
+                    <p>Discount:<span id="discount"> </span>€</p>
+                    <p>Total Cost:<span id="totalcost"> </span>€</p>
                 </div>
 
             </div>
