--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Antoaneta Ivanova">
     <meta name="description"
-        content="This is a charitable website in which people can donate money to help save the environment.">
-    <meta name="keywords" content="donation, environment, save the planet, tree, ocean, pollution, global warming">
-    <title>Welcome Page</title>
-    <link rel="icon" type="image/png" href="img/favicon.png">
-    <!--Favicon in webbrowser: https://www.w3schools.com/html/html_favicon.asp-->
+        content="This is a website in which people can purchase products in which the money goes to projects to help save the environment.">
+    <meta name="keywords" content="donation, environment, save the planet, plants, pollution, global warming">
+    <title>GrowFuture Foundation</title>
+    <link rel="icon" type="image/png" href="img/favicon.png"><!--Favicon in webbrowser: https://www.w3schools.com/html/html_favicon.asp-->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -21,28 +20,36 @@
 <body>
 
     <header>
-        <nav class="topnavigation">
+        <nav class="headernavigation">
             <div class="container-fluid">
                 <ul class="nav">
                     <li class="nav-item">
-                        <a class="nav-link text-dark p-2 fw-bold fs-3" href="#">
-                            <img src="img/favicon.png" width="40" alt="logo of Gorw Future organisation">
+                        <a class="nav-link text-dark p-2 fw-bold fs-3" href="#mainheading">
+                            <img src="img/favicon.png" width="40" alt="logo of GrowFuture organisation">
                             <span class="organsationname ps-1">GrowFuture Foundation</span>
                         </a>
                     </li>
                     <li class="nav-item nav-underline">
-                        <a class="nav-link text-dark fs-5 p-3" href="#">Home</a>
+                        <a class="nav-link text-dark fs-5 p-3" href="#mainheading">🏠Home</a>
                     </li>
                     <li class="nav-item nav-underline">
-                        <a class="nav-link text-dark fs-5 p-3" href="#">Shop</a>
+                        <a class="nav-link text-dark fs-5 p-3" href="#introheading">🌱Mission</a>
                     </li>
                     <li class="nav-item nav-underline">
-                        <a class="nav-link text-dark fs-5 p-3" href="#">Checkout</a>
+                        <a class="nav-link text-dark fs-5 p-3" href="#shoppingsection">🛒Shop</a>
+                    </li>
+                    <li class="nav-item nav-underline">
+                        <a class="nav-link text-dark fs-5 p-3" href="#socialmedia">❤️Social Media</a>
+                    </li>
+                    <li class="nav-item nav-underline">
+                        <a class="nav-link text-dark fs-5 p-3" href="#contact">📞Contact</a>
                     </li>
                 </ul>
             </div>
         </nav>
+
         <h1 id="mainheading">🌿 Grow Our Future 🌿</h1>
+
     </header>
 
     <main>
@@ -50,15 +57,13 @@
         <section id="intro">
             <div class="container">
                 <h4 id="introheading">Our Mission</h4>
-                <p id="introtext">"Our mission in <b>GrowFuture Organisation</b> is to help plant seeds in community
-                    spaces.
-                    We grow biodiversity in parks, schools, and public gardens. Help us grow our future by purchasing
+                <p id="introtext"><i>"Our mission in <b>GrowFuture Organisation</b> is to help plant seeds in community
+                    spaces. <br>We strengthen biodiversity in parks, schools, and public gardens. Help us grow our future by purchasing
                     our high-quality,
                     beginner-friendly and eco-friendly products that make you part of our mission to support plant
                     growth, bees, butterflies,
-                    and local wildlife. With every purchase, we are able to fund local nature and eco projects in order
-                    to make green spaces accessible for all.
-                    What are you waiting for? Come grow with us!"</p>
+                    and local wildlife. <br>With every purchase, we are able to fund local nature and eco projects in order
+                    to make green spaces accessible for all. <span style=" color: #0dcc3d;"><br><b>What are you waiting for? Come grow with us!"</b></span></i></p>
             </div>
 
         </section>
@@ -400,7 +405,7 @@
             <div class="row mb-4">
                 <div class="col-6 socialmedia">
                     <span><b>Follow us on:</b></span>
-                    <a href="">❤️ Instagram</a>
+                    <a id = 'socialmedia' href="">❤️ Instagram</a>
                     <a href="">💙 Facebook</a>
                 </div>
                 <div class="col-6 contact">
@@ -415,19 +420,16 @@
             <div class="container-fluid">
                 <ul class="nav">
                     <li class="nav-item">
-                        <a class="nav-link text-dark p-2 fw-bold fs-3" href="#">
+                        <a class="nav-link text-dark p-2 fw-bold fs-3" href="#mainheading">
                             <img src="img/favicon.png" width="40" alt="logo of Grow Future organisation">
                             <span class="organsationname ps-1">GrowFuture Foundation</span>
                         </a>
                     </li>
                     <li class="nav-item nav-underline">
-                        <a class="nav-link text-dark fs-5 p-3" href="#">Home</a>
+                        <a class="nav-link text-dark fs-5 p-3" href="#introheading">Home</a>
                     </li>
                     <li class="nav-item nav-underline">
-                        <a class="nav-link text-dark fs-5 p-3" href="#">Shop</a>
-                    </li>
-                    <li class="nav-item nav-underline">
-                        <a class="nav-link text-dark fs-5 p-3" href="#">Checkout</a>
+                        <a class="nav-link text-dark fs-5 p-3" href="#shoppingsection">Shop</a>
                     </li>
                 </ul>
             </div>
