--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
         content="This is a website in which people can purchase products in which the money goes to projects to help save the environment.">
     <meta name="keywords" content="donation, environment, save the planet, plants, pollution, global warming">
     <title>GrowFuture Foundation</title>
-    <link rel="icon" type="image/png" href="img/favicon.png"><!--Favicon in webbrowser: https://www.w3schools.com/html/html_favicon.asp-->
+    <link rel="icon" type="image/png" href="img/favicon.png">
+    <!--Favicon in webbrowser: https://www.w3schools.com/html/html_favicon.asp-->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -58,12 +59,15 @@
             <div class="container">
                 <h4 id="introheading">Our Mission</h4>
                 <p id="introtext"><i>"Our mission in <b>GrowFuture Organisation</b> is to help plant seeds in community
-                    spaces. <br>We strengthen biodiversity in parks, schools, and public gardens. Help us grow our future by purchasing
-                    our high-quality,
-                    beginner-friendly and eco-friendly products that make you part of our mission to support plant
-                    growth, bees, butterflies,
-                    and local wildlife. <br>With every purchase, we are able to fund local nature and eco projects in order
-                    to make green spaces accessible for all. <span style=" color: #0dcc3d;"><br><b>What are you waiting for? Come grow with us!"</b></span></i></p>
+                        spaces. <br>We strengthen biodiversity in parks, schools, and public gardens. Help us grow our
+                        future by purchasing
+                        our high-quality,
+                        beginner-friendly and eco-friendly products that make you part of our mission to support plant
+                        growth, bees, butterflies,
+                        and local wildlife. <br>With every purchase, we are able to fund local nature and eco projects
+                        in order
+                        to make green spaces accessible for all. <span style=" color: #0dcc3d;"><br><b>What are you
+                                waiting for? Come grow with us!"</b></span></i></p>
             </div>
 
         </section>
@@ -281,6 +285,9 @@
                     </div>
                 </div>
             </div>
+
+            <button type="button" id="backtotopbtn">Back to top</button>
+            
         </section>
 
         <section id="buyerinformation" class="hide">
@@ -369,15 +376,17 @@
             </form>
         </section>
 
-        <section id="confirmationpage" class = "hide">
+        <section id="confirmationpage" class="hide">
             <div class="container-fluid">
                 <div class="row">
                     <h2 class="subheading">Thank you for your Purchase!</h2>
                 </div>
                 <div class="row">
-                    <p class="introtext">Your purchase will fund our projects that <b>protect native plants</b> and <b>support
-                        local wildlife</b> in our
-                        community. <br>Now <b>YOU</b> also play a part in the collective effort to grow a green future and
+                    <p class="introtext">Your purchase will fund our projects that <b>protect native plants</b> and
+                        <b>support
+                            local wildlife</b> in our
+                        community. <br>Now <b>YOU</b> also play a part in the collective effort to grow a green future
+                        and
                         homes for local
                         wildlife.</p>
                 </div>
@@ -386,10 +395,10 @@
                 </div>
                 <div class="row">
                     <h2 class="subheading" style="text-align: left;">Purchase Summary:</h2>
-                <div class="row ps-5">
-                    <ul id = "summary" class="list-group">
-                    </ul>
-                </div>
+                    <div class="row ps-5">
+                        <ul id="summary" class="list-group">
+                        </ul>
+                    </div>
                     <p>Subtotal:<span id="subtotal"> </span>€</p>
                     <p>Discount:<span id="discount"> </span>€</p>
                     <p>Total Cost:<span id="totalcost"> </span>€</p>
@@ -405,7 +414,7 @@
             <div class="row mb-4">
                 <div class="col-6 socialmedia">
                     <span><b>Follow us on:</b></span>
-                    <a id = 'socialmedia' href="">❤️ Instagram</a>
+                    <a id='socialmedia' href="">❤️ Instagram</a>
                     <a href="">💙 Facebook</a>
                 </div>
                 <div class="col-6 contact">
