--- a/index.html
+++ b/index.html
@@ -10,62 +10,78 @@
     <meta name="keywords" content="donation, environment, save the planet, plants, pollution, global warming">
     <title>GrowFuture Foundation</title>
     <link rel="icon" type="image/png" href="img/favicon.png">
-    <!--Favicon in webbrowser: https://www.w3schools.com/html/html_favicon.asp-->
+    <!--Favicon in web browser: https://www.w3schools.com/html/html_favicon.asp-->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="js/scripts.js" defer></script>
-    
+
 </head>
 
 <body>
 
     <header>
-        <nav class="headernavigation" id ="navigation">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light headernavigation " id="navigation">
             <div class="container-fluid">
-                <ul class="nav">
-                    <li class="nav-item">
-                        <a class="nav-link text-dark p-2 fw-bold fs-3" href="#mainheading">
-                            <img src="img/favicon.png" width="40" alt="logo of GrowFuture organisation">
-                            <span class="organsationname ps-1">GrowFuture Foundation</span>
-                        </a>
-                    </li>
-                    <li class="nav-item nav-underline">
-                        <a class="nav-link text-dark fs-5 p-3" href="#mainheading">🏠Home</a>
-                    </li>
-                    <li class="nav-item nav-underline">
-                        <a class="nav-link text-dark fs-5 p-3" href="#introheading">🌱Mission</a>
-                    </li>
-                    <li class="nav-item nav-underline">
-                        <a class="nav-link text-dark fs-5 p-3" href="#shoppingsection">🛒Shop</a>
-                    </li>
-                    <li class="nav-item nav-underline">
-                        <a class="nav-link text-dark fs-5 p-3" href="#socialmedia">❤️Social Media</a>
-                    </li>
-                    <li class="nav-item nav-underline">
-                        <a class="nav-link text-dark fs-5 p-3" href="#contact">📞Contact</a>
-                    </li>
-                </ul>
+
+                <a class="navbar-brand text-dark p-2 fw-bold fs-3" href="#navigation">
+                    <img src="img/favicon.png" width="40" alt="logo of GrowFuture Foundation"><span
+                        class="ps-3">GrowFuture Foundation</span>
+                </a>
+
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item nav-underline">
+                            <a class="nav-link text-dark fs-5 p-3" href="#mainheading"><span>🏠Home</span></a>
+                        </li>
+                        <li class="nav-item nav-underline">
+                            <a class="nav-link text-dark fs-5 p-3" href="#introheading">🌱Mission</a>
+                        </li>
+                        <li class="nav-item nav-underline">
+                            <a class="nav-link text-dark fs-5 p-3" href="#shoppingsection">🛒Shop</a>
+                        </li>
+                        <li class="nav-item nav-underline">
+                            <a class="nav-link text-dark fs-5 p-3" href="#socialmedia">❤️Social Media</a>
+                        </li>
+                        <li class="nav-item nav-underline">
+                            <a class="nav-link text-dark fs-5 p-3" href="#contact">📞Contact</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </nav>
 
-        <h1 id="mainheading">🌿 Grow Our Future 🌿</h1>
+        <h1 id="mainheading" class="fs-1 fs-md-2 fs-lg-1">🌿 Grow Our Future 🌿</h1>
 
     </header>
-
+    <!--taxes,-->
+    <!---Documentation.pdf: Bootstrap components and functionality from Bootstrap you used and how your JavaScript code works.-->
+    <!--Web Accessibility: responsiveness-->
     <main>
 
         <section id="intro">
             <div class="container">
-                <h4 id="introheading">Our Mission</h4>
-                <p id="introtext"><i>Our mission at <b>GrowFuture Foundation</b> is to support nature by planting seeds in community spaces.
-                    <b>Pollution and global warming</b> are increasingly harming our environment, and without proper care for plants and local wildlife, 
-                    future generations will suffer the consequences of today's neglect. We work to <b>strengthen biodiversity</b> in parks, schools, and 
-                    public gardens by encouraging <b>sustainable planting and environmental awareness</b>. By purchasing our high-quality, beginner-friendly, 
-                    and eco-friendly products, YOU become part of our mission to support plant growth, bees, butterflies, and local wildlife. <b>Every 
-                    purchase helps fund local environmental and nature projects</b>, allowing us to protect green spaces and further expand the growth 
-                    and conservation of our natural environment."
-                    <span style=" color:#0B6E4F;"><br><b>What are YOU waiting for? Come grow with US!</b></span></i></p>
+                <h4 id="introheading fs-1 fs-md-2 fs-lg-1">Our Mission</h4>
+                <p id="introtext" class="fs-5 fs-md-2 fs-lg-1">
+                    <i>Our mission at <b>GrowFuture Foundation</b> is to support nature by planting seeds in community
+                        spaces.
+                        <b>Pollution and global warming</b> are increasingly harming our environment, and without proper
+                        care for plants and local wildlife,
+                        future generations will suffer the consequences of today's neglect. We work to <b>strengthen
+                            biodiversity</b> in parks, schools, and
+                        public gardens by encouraging <b>sustainable planting and environmental awareness</b>. By
+                        purchasing our high-quality, beginner-friendly,
+                        and eco-friendly products, YOU become part of our mission to support plant growth, bees,
+                        butterflies, and local wildlife. <b>Every
+                            purchase helps fund local environmental and nature projects</b>, allowing us to protect
+                        green spaces and further expand the growth
+                        and conservation of our natural environment."
+                        <span style=" color:#0B6E4F;"><br><b>What are YOU waiting for? Come grow with US!</b></span></i>
+                </p>
             </div>
         </section>
 
@@ -73,14 +89,16 @@
         <section id="shoppingsection">
 
             <div class="container">
-                <h4 class="subheading">Support Nature Through Our Products:</h4>
+                <h4 class="subheading fs-3 fs-md-2 fs-lg-1">Support Nature Through Our Products:</h4>
                 <div class="row" id="cartinfo">
-                    <p>🛒 <b>Number of items in your Shopping Cart:</b> <span id="cartcount">0</span></p>
-                    <p>💳 <b>Total amount: €</b> <span id="totalprice">0</span></p>
+                    <p class="badge bg-success col-6 col-md-4 col-lg-3 fs-6 fs-md-2 fs-lg-1 p-2 m-2">🛒 <b>Shopping Cart:</b> <span id="cartcount">0</span></p>
+                </div>
+                <div class="row" id="cartinfo">
+                    <p class="badge bg-success col-6 col-md-4 col-lg-3 fs-6 fs-md-2 fs-lg-1 p-2 m-2">💳 <b>Total amount: €</b> <span id="totalprice">0</span></p>
                 </div>
 
-                <button type="button" id="resetbtn">🔄 Reset Cart</button>
-                <button type="button" id="checkoutbtn">✅ Checkout</button>
+                <button type="button" id="resetbtn" class="col-5 fs-6 col-md-3">🔄 Reset Cart</button>
+                <button type="button" id="checkoutbtn" class="col-5 fs-6 col-md-3">✅ Checkout</button>
 
                 <div class="row mt-3">
 
@@ -266,7 +284,8 @@
                                     Every purchase supports our community gardening and planting efforts.
                                 </p>
                                 <p class="card-text fw-bold">€7</p>
-                                <button class="addtocartbtn" data-name="Biodegradable Starter Pots" data-price="7">🛍️ Add to Cart</button>
+                                <button class="addtocartbtn" data-name="Biodegradable Starter Pots" data-price="7">🛍️
+                                    Add to Cart</button>
                             </div>
                         </div>
                     </div>
@@ -281,7 +300,8 @@
                                     Each purchase supports our planting projects.
                                 </p>
                                 <p class="card-text fw-bold">€3</p>
-                                <button class="addtocartbtn" data-name="Wooden Plant Labels" data-price="3">🛍️ Add to Cart</button>
+                                <button class="addtocartbtn" data-name="Wooden Plant Labels" data-price="3">🛍️ Add to
+                                    Cart</button>
 
                             </div>
                         </div>
@@ -289,8 +309,9 @@
                 </div>
 
                 <div class="row">
-                    <div class="col-3 mb-5">
-                        <a href="#shoppingsection"><button type="button" id="backtotopbtn">⬆️ Back to top ⬆️</button></a>
+                    <div class="col-8 fs-6 col-md-3 mb-3">
+                        <a href="#shoppingsection"><button type="button" id="backtotopbtn">Back to top
+                                ⬆️</button></a>
                     </div>
                 </div>
 
@@ -341,7 +362,7 @@
                     <div class="row justify-content-center">
                         <div class="shippinginfo col-12 col-sm-12 col-md-12 col-lg-4 ms-3">
                             <label for="streetAddress">Street Address:</label>
-                            <input type="text" class="form-control id="streetAddress" name="streetAddress"
+                            <input type="text" class="form-control id=" streetAddress" name="streetAddress"
                                 placeholder="Enter your street address..." required>
                         </div>
                         <div class="shippinginfo col-12 col-sm-12 col-md-12 col-lg-4 ms-3">
@@ -359,7 +380,7 @@
                         </div>
                         <div class="shippinginfo col-12 col-sm-12 col-md-12 col-lg-4 ms-3">
                             <label for="postalCode">ZIP/Postal code:</label>
-                            <input type="text" class="form-control" id="postalCode" name="postalCode"
+                            <input type="text" class="form-control" maxlength='6' name="postalCode"
                                 placeholder="Enter your ZIP/Postal code..." required>
                         </div>
                     </div>
@@ -421,12 +442,12 @@
     <footer>
         <div class="container-fluid footertext">
             <div class="row mb-4">
-                <div class="col-6 socialmedia">
+                <div class="col-12 fs-5 mb-3 socialmedia">
                     <span><b>Follow us on:</b></span>
                     <a id='socialmedia' href="">❤️ Instagram</a>
                     <a href="">💙 Facebook</a>
                 </div>
-                <div class="col-6 contact">
+                <div class="col-12 fs-5 contact">
                     <span><b>Contact us:</b></span>
                     <span id='contact'>📞 +43 660 123 4567</span>
                     <span id='contact'>📧 hello@growfuture.org</span>
@@ -435,15 +456,15 @@
         </div>
         <span>© 2024 GrowFuture Foundation. All rights reserved.</span>
 
-        <nav class="footernavigation" id="footnav">
+        <nav class="navbar footernavigation" id="footnav">
             <div class="container-fluid">
-                <ul class="nav">
-                    <li class="nav-item">
-                        <a class="nav-link text-dark p-2 fw-bold fs-3" href="#mainheading">
-                            <img src="img/favicon.png" width="40" alt="logo of Grow Future organisation">
-                            <span class="organsationname ps-1">GrowFuture Foundation</span>
-                        </a>
-                    </li>
+
+                <a class="navbar-brand text-dark p-2 fw-bold fs-3 col-6" href="#navigation">
+                    <img src="img/favicon.png" width="40" alt="logo of GrowFuture Foundation"><span
+                        class="ps-3">GrowFuture Foundation</span>
+                </a>
+
+                <ul class="navbar-nav">
                     <li class="nav-item nav-underline">
                         <a class="nav-link text-dark fs-5 p-3" href="#introheading">🏠Home</a>
                     </li>
@@ -457,7 +478,8 @@
             </div>
         </nav>
     </footer>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+  </body>
 </body>
 
 </html>
