--- a/index.html
+++ b/index.html
@@ -417,15 +417,15 @@
                 </div>
                 <div class="row">
                     <h2 class="subheading">Purchase Summary:</h2>
-                    <p class="ps-6 fs-5"><b>🛒 Cart Summary:</b></p>
+                    <p class="fs-5 m-5"><b>🛒 Cart Summary:</b></p>
                     <div class="row ps-5 fs-5">
                         <ul id="summary" class="list-group">
                         </ul>
                     </div>
-                    <div class="ps-4 fs-5">
-                        <p><b>Subtotal:</b><span id="subtotal"> </span>€</p>
-                        <p><b>Discount:</b><span id="discount"> </span>€</p>
-                        <p><b>Total Cost:</b><span id="totalcost"> </span>€</p>
+                    <div class="m-5 fs-5">
+                        <p><b>Subtotal: </b><span id="subtotal"> </span>€</p>
+                        <p><b>Discount: </b><span id="discount"> </span>€</p>
+                        <p><b>Total Cost: </b><span id="totalcost"> </span>€</p>
                     </div>
                 </div>
 
