--- a/index.html
+++ b/index.html
@@ -417,12 +417,12 @@
                 </div>
                 <div class="row">
                     <h2 class="subheading">Purchase Summary:</h2>
-                    <p class="fs-5 m-5"><b>🛒 Cart Summary:</b></p>
-                    <div class="row ps-5 fs-5">
-                        <ul id="summary" class="list-group">
+                    <div class="row justify-content-center">
+                        <p class="fs-5 text-center"><b>🛒 Cart Summary:</b></p>
+                        <ul id="summary" class="list-group list-unstyled fs-5 col-12 col-md-6 text-center">
                         </ul>
                     </div>
-                    <div class="m-5 fs-5">
+                    <div class="text-center fs-5 mt-3">
                         <p><b>Subtotal: </b><span id="subtotal"> </span>€</p>
                         <p><b>Discount: </b><span id="discount"> </span>€</p>
                         <p><b>Total Cost: </b><span id="totalcost"> </span>€</p>
